# MedLib

./: .gitignore  arq.txt  pyproject.toml  requirements.txt
assets/css/: style.css
assets/imgs/: OIP (3).jfif  about-img.jfif  html.jfif  leia.md
assets/js/: script.js
assets/libs/: package-lock.json  package.json
control/: admin.py  forms.py  models.py  urls.py  views.py
control/migrations/: 0001_initial.py  0002_alter_reader_grade.py  0002_reader_photo.py  0003_alter_reader_course_alter_reader_grade_and_more.py  0003_alter_reader_group.py  0004_reader_course_alter_reader_photo_and_more.py  0005_alter_reader_course.py  0006_reader_slug_alter_reader_course_alter_reader_grade_and_more.py  0007_alter_reader_group_alter_reader_slug.py  0008_alter_reader_group.py  0009_alter_reader_group_alter_reader_photo.py  0010_alter_reader_group.py  0011_remove_reader_photo_remove_reader_slug_reader_uid_and_more.py  0012_alter_reader_grade.py
core/: asgi.py  leia.md  settings.py  urls.py
core/secrets/: .env
courses/: admin.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_remove_video_teacher_course_teacher_and_more.py  0002_video_uuid.py  0003_alter_course_name_alter_video_title.py  0003_alter_video_duration.py  0004_alter_video_path.py  0004_faq.py  0005_alter_course_category_alter_course_slug_and_more.py  0006_comment.py  0007_alter_course_teacher_rename_curso_video_course_and_more.py  0008_remove_course_categories_course_category.py  0009_alter_course_preview.py  0010_course_description.py  0010_course_stars.py  0011_alter_comment_content_alter_comment_video_and_more.py  0012_alter_course_stars.py  0013_course_updated_at.py  0014_course_description.py  0015_course_uuid_alter_course_slug.py  0015_merge_0010_course_description_0014_course_description.py  0016_alter_course_description.py
docs/: README.md
staticfiles/CACHE/: manifest.json
templates/bases/: base.html  control.html  course.html  library.html
templates/control/: profile.html  signin.html  signup.html
templates/courses/: courses-list.html  courses-video.html  courses-watch.html
templates/errors/: errors.html
templates/partials/: courses_list.html  dashboard-card-data.html  dashboard-main-chart.html  dashboard-table-books.html  dashboard-table-sugestions.html  footer.html  forms_errors.html  (+2 more)
uploads/: leia.md
(+71 files in other folders)
