[tool.poetry]
name = "biblioteca-virtual-smartbits"
version = "0.1.0"
description = "Biblioteca Virtual para o IPPS"
authors = ["angelo-francisco <ics20080729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
pillow = "^11.0.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"


[tool.taskipy.tasks]
run = 'python manage.py runserver'
mg = 'python manage.py migrate'
app = 'python manage.py startapp'
mkmg = 'python manage.py makemigrations'
export = 'poetry export -f requirements.txt --output requirements.txt --without-hashes --without-urls'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
