[project]
name = "biblioteca-virtual-smartbits"
version = "0.1.0"
description = ""
authors = [
    {name = "angelo-francisco",email = "ics20080729@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "django-tailwind (>=3.8.0,<4.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django (>=5.1.6,<6.0.0)",
    "pillow (<11.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "tzdata (>=2025.1,<2026.0)",
    "django-compressor (>=4.5.1,<5.0.0)",
    "crispy-tailwind (>=1.0.3,<2.0.0)",
    "django-colorfield (>=0.12.0,<0.13.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "brotli (>=1.1.0,<2.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "django-browser-reload (>=1.18.0,<2.0.0)",
    "channels[redis] (>=4.2.0,<5.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "pymediainfo (>=7.0.1,<8.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
djlint = "^1.36.4"


[tool.taskipy.tasks]
run = "python manage.py runserver"
mg = "python manage.py migrate"
mkmg = "python manage.py makemigrations"
cs = "python manage.py createsuperuser"
tl = "python manage.py tailwind start"

[tool.djlint]
profile="django"